Added Microsoft support

--- a/app/assets/lang/en_US.json
+++ b/app/assets/lang/en_US.json
@@ -33,6 +33,9 @@
                 },
                 "unknown": {
                     "title": "Error During Login:<br>Unknown Error"
+                },
+                "userCancelled": {
+                    "title": "Error During Login:<br>Login Cancelled"
                 }
             },
             "login": "LOGIN",
