--- a/app/assets/lang/fr_FR.json
+++ b/app/assets/lang/fr_FR.json
@@ -45,7 +45,7 @@
         },
         "landing": {
             "launch": {
-                "pleaseWait": "Attendez s'il vous plaît.."
+                "pleaseWait": "Veuillez patienter.."
             }
         }
     }
